# KMI_PGI_WS2023-2024_The-Void

./: README.md
test-cpp/: CMakeLists.txt  konto.cpp  konto.h  main.cpp
Übungen/Uebung-10/: CMakeLists.txt  main.c  main.cpp
Übungen/Uebung-10_C/: CMakeLists.txt  fruitbasket.cpp  fruitbasket.h  main.cpp
Übungen/Uebung-11/: CMakeLists.txt  apple.cpp  apple.h  application.cpp  fruitbasket.cpp  fruitbasket.h  main.cpp
Übungen/Uebung-12/: CMakeLists.txt  application.cpp  application.h  fruit.cpp  fruit.h  fruitbasket.cpp  fruitbasket.h  fruitlist.cpp  fruitlist.h
Übungen/Uebung-3/: CMakeLists.txt  main.c
Übungen/Uebung-4/: CMakeLists.txt  main.c
Übungen/Uebung-5/: CMakeLists.txt  main.c
Übungen/Uebung-6/: CMakeLists.txt  main.c
Übungen/Uebung-7/: CMakeLists.txt  main.c
Übungen/Uebung-8/: CMakeLists.txt  main.c
Übungen/Uebung-9/: CMakeLists.txt  main.c
Übungen/Uebung1/: .gitignore  main  main.c
Übungen/Uebung2/: CMakeLists.txt  main  main.c
Übungen/Uebung2/build-Uebung2-Desktop_arm_darwin_generic_mach_o_32bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Übungen/Uebung2/build-Uebung2-Desktop_arm_darwin_generic_mach_o_32bit-Debug/.cmake/api/v1/reply/: cache-v2-61a25ef9c6f594b6bb86.json  cmakeFiles-v1-cb6ce4cc7dee9b1a2ddb.json  codemodel-v2-49502978653477459475.json  directory-.-Debug-a00bb2f783486592f490.json  index-2023-11-01T09-31-12-0596.json  target-Uebung2-Debug-843efdca5dfe210ee663.json
Übungen/Uebung2/build-Uebung2-Desktop_arm_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/: compile_commands.json
Übungen/Uebung2/build-Uebung2-Desktop_arm_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/.cache/clangd/index/: _int8_t.h.3357B505F0883FE9.idx  main.c.3F0A72EE4428EFAE.idx
Übungen/ascii/: CMakeLists.txt  main.c
(+697 files in other folders)
